codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_halfwidth_kana_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
assertion_line: 1568
expression: sanitized
---
/status

╭────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.2.3)              │
│                                        │
│  Model:                ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞ  │
│  Model provider:       GLM (Zhipu)     │
│  Directory: [[workspace]]              │
│  Permissions:          Custom (workspa │
│  Agents.md:            <none>          │
│  Account:              ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟ@ex │
│  Thread name:          ｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞ  │
│  Collaboration mode:   ｶﾞﾊﾟ collaborat │
│                                        │
│  Limits:               data not availa │
╰────────────────────────────────────────╯
